[package]
name = "redis-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
dotenv = "0.15.0"
redis = { version = "0.27.5", features = ["cluster-async", "tokio-comp"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
bb8 = "0.8.6"
bb8-redis = "0.17.0"
lru = "0.12.5"
